update sms api for sum37

--- a/09_Theme_08_v2/Web.config
+++ b/09_Theme_08_v2/Web.config
@@ -19,7 +19,11 @@
 
    <add key="storeID" value="48" />    
     <add key="storeTokenKey" value="6f030b13-e665-4de5-bbbf-fe46a31a791d" />
- 
+    <!--http://speedsms.vn-->
+    <add key="SmsAPIKey" value="29C433A4AE2960285432EB4DAB7882" />
+    <add key="SmsSecretKey" value="EAFFB5ADACED2061529C245919D81D" />
+    <!--3:19001534 (280đ),4:BranchName Notify (1000đ )-->
+    <add key="SmsType" value="4" />  
   </appSettings> 
   <system.web>
     <authentication mode="None" />
