--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,7 @@ Shop_07_MultiProduct/obj/
 04_Shop_multiProduct/04_Shop_MultiProduct.csproj.user
 10_Shop_MultiProduct/obj/
 10_Shop_MultiProduct/bin/
+12_Theme_Multi_Product_Option_2/bin/
+01_Company_Info/obj/
+12.2_not13_Shop_MultiProduct/
+12_Theme_Multi_Product_Option_2/obj/
