--- a/09_Theme_08_v2/Web.config
+++ b/09_Theme_08_v2/Web.config
@@ -22,6 +22,7 @@
     <!--http://speedsms.vn-->
     <add key="SmsAPIKey" value="D6CE0083A5DC064FCC46B9E5D31D99" />
     <add key="SmsSecretKey" value="59E5F65E3B7146EBF93C6CD0678BBA" />
+    <add key="brandName" value="QCAO_ONLINE" />
     <!--3:19001534 (280đ),4:BranchName Notify (1000đ )-->
     <add key="SmsType" value="4" />  
   </appSettings> 
