--- a/12_Shop_MultiProduct/12_Theme_MultiProduct.csproj
+++ b/12_Shop_MultiProduct/12_Theme_MultiProduct.csproj
@@ -347,6 +347,7 @@
     <Content Include="assets\fonts\fontawesome-webfont.woff2" />
     <Content Include="Html\.idea\.name" />
     <Content Include="Html\.idea\HTML.iml" />
+    <Content Include="Html\css\style-2.css" />
     <Content Include="Html\css\style.scss" />
     <Content Include="Html\css\_footer.scss" />
     <Content Include="Html\css\_header.scss" />
