--- a/12_Theme_Multi_Product_Option_2/12_Theme_08_v2.csproj
+++ b/12_Theme_Multi_Product_Option_2/12_Theme_08_v2.csproj
@@ -7,7 +7,7 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{7BD6C00D-C94D-4198-9C16-D6EB902ACD1E}</ProjectGuid>
+    <ProjectGuid>{547734B9-8444-4F9E-9BA1-0DC8A9244B3D}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -54,9 +54,6 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
-    </Reference>
-    <Reference Include="RazorEngine, Version=3.10.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
-      <HintPath>..\packages\RazorEngine.3.10.0\lib\net45\RazorEngine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -125,14 +122,10 @@
     <Compile Include="Controllers\APIController.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
-    <Compile Include="Controllers\BrandsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\SeoController.cs" />
     <Compile Include="Controllers\StaticController.cs" />
-    <Compile Include="Global.asax.cs">
-      <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
     <Compile Include="handler\PaymentHandler.ashx.cs">
       <DependentUpon>PaymentHandler.ashx</DependentUpon>
     </Compile>
@@ -146,7 +139,6 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Startup.cs" />
     <Compile Include="Web References\WebService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -154,21 +146,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="assets\animate.css" />
-    <Content Include="assets\animate.js" />
     <Content Include="assets\images\bg-menu.png" />
     <Content Include="assets\images\gachmenu.png" />
     <Content Include="assets\images\loading.gif" />
-    <Content Include="assets\js\countdown\countdownBasic.html" />
-    <Content Include="assets\js\countdown\countdownGlowing.gif" />
-    <Content Include="assets\js\countdown\countdownLED.png" />
-    <Content Include="assets\js\countdown\jquery.countdown-es.js" />
-    <Content Include="assets\js\countdown\jquery.countdown-vi.js" />
-    <Content Include="assets\js\countdown\jquery.countdown.css" />
-    <Content Include="assets\js\countdown\jquery.countdown.js" />
-    <Content Include="assets\js\countdown\jquery.countdown.min.js" />
-    <Content Include="assets\js\countdown\jquery.plugin.js" />
-    <Content Include="assets\js\countdown\jquery.plugin.min.js" />
     <Content Include="assets\fonts\fontawesome-webfont.svg" />
     <Content Include="assets\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="assets\fonts\site-icons.svg" />
@@ -278,8 +258,6 @@
     <Content Include="assets\js\bootstrap.min.js" />
     <Content Include="assets\js\cloud-zoom.js" />
     <Content Include="assets\js\common.js" />
-    <Content Include="assets\js\express_buttons.js" />
-    <Content Include="assets\js\features.js" />
     <Content Include="assets\js\jquery.bxslider.min.js" />
     <Content Include="assets\js\jquery.flexslider.js" />
     <Content Include="assets\js\jquery.min.js" />
@@ -288,12 +266,10 @@
     <Content Include="assets\js\parallax.js" />
     <Content Include="assets\js\revslider.js" />
     <Content Include="assets\js\slider.js" />
-    <Content Include="assets\owl-carousel.css" />
-    <Content Include="assets\owl.carousel.min.js" />
-    <Content Include="assets\style.css" />
     <Content Include="assets\stylesheet\bootstrap.min.css" />
     <Content Include="assets\stylesheet\flexslider.css" />
     <Content Include="assets\stylesheet\font-awesome.css" />
+    <Content Include="assets\stylesheet\grey.css" />
     <Content Include="assets\stylesheet\jquery.bxslider.css" />
     <Content Include="assets\stylesheet\jquery.mobile-menu.css" />
     <Content Include="assets\stylesheet\NganLuongBankList.css" />
@@ -302,8 +278,6 @@
     <Content Include="assets\stylesheet\responsive.css" />
     <Content Include="assets\stylesheet\revslider.css" />
     <Content Include="assets\stylesheet\style.css" />
-    <Content Include="favicon.ico" />
-    <Content Include="Global.asax" />
     <Content Include="handler\ProductHandler.ashx" />
     <Content Include="assets\fonts\clhLqOv7MXn459PTh0gXYHW1xglZCgocDnD_teV2lMU.woff" />
     <Content Include="assets\fonts\fontawesome-webfont.eot" />
@@ -323,11 +297,6 @@
     <Content Include="assets\fonts\SFUFuturaBook.TTF" />
     <Content Include="assets\fonts\SFUFuturaBold.TTF" />
     <Content Include="handler\PaymentHandler.ashx" />
-    <Content Include="assets\assets.js" />
-    <Content Include="assets\responsive.css" />
-    <Content Include="assets\shop.js" />
-    <Content Include="assets\loadingLogo.gif" />
-    <Content Include="assets\scripts.js" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -348,13 +317,14 @@
     <Content Include="Views\Shared\article\_MenuAndAdsPartial.cshtml" />
     <Content Include="Views\Product\Checkout.cshtml" />
     <Content Include="Views\Shared\_partial\_HomeSlide_1.cshtml" />
+    <Content Include="Views\Shared\_partial\_HomeSlide_2.cshtml" />
     <Content Include="Views\Shared\_partial\_MainHeader_1.cshtml" />
+    <Content Include="Views\Shared\_partial\_MainHeader_2.cshtml" />
     <Content Include="Views\Shared\product\_productDetail.cshtml" />
     <Content Include="Views\Shared\_partial\_MainFooter_1.cshtml" />
     <Content Include="Views\Home\Policy.cshtml" />
     <Content Include="Views\API\Index.cshtml" />
     <Content Include="Views\Product\SearchAjax.cshtml" />
-    <Content Include="Views\Brands\Index.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -369,16 +339,6 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config">
-      <SubType>Designer</SubType>
-    </Content>
-    <Content Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
-    <Content Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </Content>
-    <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
@@ -422,11 +382,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="assets\js\countdown\" />
     <Folder Include="Views\Base\" />
+    <Folder Include="Views\Seo\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
-    <None Include="Project_Readme.html" />
     <None Include="Properties\PublishProfiles\Shoes Store.pubxml" />
     <None Include="Web References\WebService\AnperoService.wsdl" />
   </ItemGroup>
@@ -469,11 +429,11 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>32561</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:32505</IISUrl>
+          <IISUrl>http://localhost:32509</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
