--- a/10_Shop_MultiProduct/10_Theme_MultiProduct.csproj
+++ b/10_Shop_MultiProduct/10_Theme_MultiProduct.csproj
@@ -157,6 +157,8 @@
     <Content Include="assets\animate.css" />
     <Content Include="assets\animate.js" />
     <Content Include="assets\images\bg-menu.png" />
+    <Content Include="assets\images\bg1.jpg" />
+    <Content Include="assets\images\bg1.png" />
     <Content Include="assets\images\gachmenu.png" />
     <Content Include="assets\images\loading.gif" />
     <Content Include="assets\js\countdown\countdownBasic.html" />
