--- a/10_Shop_MultiProduct/10_Theme_MultiProduct.csproj
+++ b/10_Shop_MultiProduct/10_Theme_MultiProduct.csproj
@@ -291,6 +291,7 @@
     <Content Include="assets\js\revslider.js" />
     <Content Include="assets\js\slider.js" />
     <Content Include="assets\owl-carousel.css" />
+    <Content Include="assets\owl.carousel.min.css" />
     <Content Include="assets\owl.carousel.min.js" />
     <Content Include="assets\style.css" />
     <Content Include="assets\stylesheet\bootstrap.min.css" />
