--- a/12.2_not13_Shop_MultiProduct/11_Theme_MultiProduct.csproj
+++ b/12.2_not13_Shop_MultiProduct/11_Theme_MultiProduct.csproj
@@ -331,6 +331,7 @@
     <Content Include="Scripts\Bootrap.notify.js" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Scripts\jquery.cokie.min.js" />
+    <Content Include="Scripts\owl.carousel.min.js" />
     <Content Include="Scripts\SearchControl.js" />
     <Content Include="Scripts\ShoppingCart.js" />
     <Content Include="Views\Product\Index.cshtml" />
