--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,4 @@ Shop_07_MultiProduct/obj/
 07_Shop_MultiProduct/07_Shop_MultiProduct.csproj.user
 06_Shop_Onepage/06_Shop_OnePage.csproj.user
 05_Shop_MultiProduct/05_Shop_MultiProduct.csproj.user
+MLTest/obj/
