update seo data

--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,6 @@ Shop_07_MultiProduct/obj/
 06_Shop_Onepage/06_Shop_OnePage.csproj.user
 05_Shop_MultiProduct/05_Shop_MultiProduct.csproj.user
 MLTest/obj/
+14_8_CompanyInfo/obj/
+14_8_CompanyInfo/bin/Anpero.pdb
+14_8_CompanyInfo/bin/
