--- a/14_8_CompanyInfo/Web.config
+++ b/14_8_CompanyInfo/Web.config
@@ -30,6 +30,11 @@
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.webServer>
+     <handlers>
+      <add name="SitemapXml" path="sitemap.xml" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
+      <add name="robots" path="robots.txt" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
+    </handlers>
+    
     <modules>
       <remove name="FormsAuthentication"/>
     </modules>
