--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,7 @@ MLTest/obj/Release/netcoreapp2.2/MLTest.csproj.CoreCompileInputs.cache
 14_8_CompanyInfo/obj/Debug/14_CompanyInfo.csproj.CoreCompileInputs.cache
 14_8_CompanyInfo/obj/Release/14_CompanyInfo.csprojAssemblyReference.cache
 04_V2_Shop_multiProduct/obj/
+14_8_CompanyInfo/bin/
+12.2_not13_Shop_MultiProduct/bin/
+04_V2_Shop_multiProduct/bin/
+14_8_CompanyInfo/obj/
