update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,4 @@ MLTest/obj/Release/netcoreapp2.2/MLTest.csproj.CoreCompileInputs.cache
 14_8_CompanyInfo/obj/Debug/14_CompanyInfo.csproj.CoreCompileInputs.cache
 14_8_CompanyInfo/obj/Release/14_CompanyInfo.csprojAssemblyReference.cache
 04_V2_Shop_multiProduct/obj/
+MLTest/obj/
