--- a/15_Company_Info/15_company_Info.csproj
+++ b/15_Company_Info/15_company_Info.csproj
@@ -951,7 +951,7 @@
     <Content Include="Views\Article\Category.cshtml" />
     <Content Include="Views\Shared\article\_MenuAndAdsPartial.cshtml" />
     <Content Include="Views\Product\Checkout.cshtml" />
-    <Content Include="Views\Shared\_partial\_HomeSlide_1.cshtml" />
+    <Content Include="Views\Shared\_partial\_HomeSlide.cshtml" />
     <Content Include="Views\Shared\_partial\_MainHeader_1.cshtml" />
     <Content Include="Views\Shared\product\_productDetail.cshtml" />
     <Content Include="Views\Shared\_partial\_searchBox.cshtml" />
