--- a/15_Company_Info/15_company_Info.csproj
+++ b/15_Company_Info/15_company_Info.csproj
@@ -706,6 +706,7 @@
     <Content Include="beehome.vn\wp-json\oembed\1.0\embedcf9a" />
     <Content Include="beehome.vn\wp-json\oembed\1.0\embedecc5.json" />
     <Content Include="beehome.vn\wp-json\oembed\1.0\embedf474" />
+    <Content Include="Scripts\Bootrap.notify.js" />
     <Content Include="wp-content\plugins\akismet\_inc\form8aee.js" />
     <Content Include="wp-content\plugins\contact-form-7\images\ajax-loader.gif" />
     <Content Include="wp-content\plugins\contact-form-7\includes\css\stylesbdeb.css" />
@@ -955,6 +956,8 @@
     <Content Include="Views\Shared\_partial\_MainHeader_1.cshtml" />
     <Content Include="Views\Shared\product\_productDetail.cshtml" />
     <Content Include="Views\Shared\_partial\_searchBox.cshtml" />
+    <Content Include="Views\Home\Policy.cshtml" />
+    <Content Include="Views\Product\CategoryList.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
