--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ MLTest/obj/Release/netcoreapp2.2/MLTest.csproj.CoreCompileInputs.cache
 14_8_CompanyInfo/obj/Release/14_CompanyInfo.csprojAssemblyReference.cache
 04_V2_Shop_multiProduct/obj/
 MLTest/obj/
+15_Company_Info/obj/
