--- a/15_Company_Info/15_company_Info.csproj
+++ b/15_Company_Info/15_company_Info.csproj
@@ -154,6 +154,7 @@
     <Content Include="assets\css\option6.css" />
     <Content Include="assets\css\reset.css" />
     <Content Include="assets\css\responsive.css" />
+    <Content Include="assets\css\style-contact.css" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\fonts\fontello.svg" />
     <Content Include="assets\images\290x360.png" />
@@ -233,6 +234,7 @@
     <Content Include="assets\images\up.png" />
     <Content Include="assets\images\user-icon.png" />
     <Content Include="assets\images\white_texture.jpg" />
+    <Content Include="assets\js\contact.js" />
     <Content Include="assets\js\jquery.actual.min.js" />
     <Content Include="assets\js\jquery-slimscroll-min.js" />
     <Content Include="assets\js\option4.js" />
@@ -383,25 +385,6 @@
     <Content Include="beehome.vn\beehome.html" />
     <Content Include="beehome.vn\contact\beehome.html" />
     <Content Include="beehome.vn\contact\index.html" />
-    <Content Include="beehome.vn\index.html" />
-    <Content Include="beehome.vn\index0012.html" />
-    <Content Include="beehome.vn\index00bf.html" />
-    <Content Include="beehome.vn\index2e8b.html" />
-    <Content Include="beehome.vn\index4192.html" />
-    <Content Include="beehome.vn\index4579.html" />
-    <Content Include="beehome.vn\index4db6.html" />
-    <Content Include="beehome.vn\index5d49.html" />
-    <Content Include="beehome.vn\index5f87.html" />
-    <Content Include="beehome.vn\index5fb3.html" />
-    <Content Include="beehome.vn\index8ae4.html" />
-    <Content Include="beehome.vn\index8cf7.html" />
-    <Content Include="beehome.vn\indexa123.html" />
-    <Content Include="beehome.vn\indexb4d2.html" />
-    <Content Include="beehome.vn\indexc5eb.html" />
-    <Content Include="beehome.vn\indexcc0f.html" />
-    <Content Include="beehome.vn\indexd0ff.html" />
-    <Content Include="beehome.vn\indexe98c.html" />
-    <Content Include="beehome.vn\indexf8fc.html" />
     <Content Include="beehome.vn\portfolio\chung-cu-phong-cach-co-dien-anh-cong-hillstate\index.html" />
     <Content Include="beehome.vn\portfolio\office-on-space\index.html" />
     <Content Include="beehome.vn\portfolio\thiet-ke-phong-cach-hien-dai-chi-ly-ha-dong\index.html" />
@@ -575,7 +558,7 @@
     <Content Include="beehome.vn\wp-content\uploads\2019\06\favicon.png" />
     <Content Include="beehome.vn\wp-content\uploads\2019\07\181130_DL1_Scandinavi_Phong-Khach.jpg" />
     <Content Include="beehome.vn\wp-content\uploads\2019\07\181130_DL1_Scandinavi_Phong-Ngu-Master-2.jpg" />
-    <Content Include="beehome.vn\wp-content\uploads\2019\07\b3fd5.png" />
+    <Content Include="assets\images\b3fd5.png" />
     <Content Include="beehome.vn\wp-content\uploads\2019\07\bông1-min.jpg" />
     <Content Include="beehome.vn\wp-content\uploads\2019\07\callgif.gif" />
     <Content Include="beehome.vn\wp-content\uploads\2019\07\noi-that-beehome.png" />
@@ -633,7 +616,6 @@
     <Content Include="beehome.vn\wp-includes\js\jquery\jquery4a5f.js" />
     <Content Include="beehome.vn\wp-includes\js\wp-embed.min2513.js" />
     <Content Include="beehome.vn\wp-includes\wlwmanifest.xml" />
-    <Content Include="beehome.vn\wp-json\index.html" />
     <Content Include="Global.asax" />
     <Content Include="handler\ProductHandler.ashx" />
     <Content Include="handler\LocationHandler.ashx" />
@@ -668,44 +650,6 @@
     <Content Include="beehome.vn\wp-content\themes\archi-3.0.1\fonts\font-awesome\fonts\fontawesome-webfont3e6e.woff" />
     <Content Include="beehome.vn\wp-content\themes\archi-3.0.1\fonts\font-awesome\fonts\fontawesome-webfont3e6e.woff2" />
     <Content Include="beehome.vn\wp-content\themes\archi-3.0.1\fonts\font-awesome\fonts\fontawesome-webfontd41d.eot" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed065d.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed06c3.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed1d9d" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed1e82.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed2194.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed22d7.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed23d8.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed299e" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed2f67.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed3373.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed3a8c" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed4590" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed4f24" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed5459.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed5505" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed625e" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed62fd.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed654a" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed6a65" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed6bdb" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed6d01.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed7928.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed87eb" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed8a67" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed8b3e.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed931c.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embed96ce.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embeda27a" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedaa31" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedac5d" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedaf53" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedb5f6.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedb674" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedc697" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedce59.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedcf9a" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedecc5.json" />
-    <Content Include="beehome.vn\wp-json\oembed\1.0\embedf474" />
     <Content Include="Scripts\Bootrap.notify.js" />
     <Content Include="wp-content\plugins\akismet\_inc\form8aee.js" />
     <Content Include="wp-content\plugins\contact-form-7\images\ajax-loader.gif" />
@@ -958,6 +902,7 @@
     <Content Include="Views\Shared\_partial\_searchBox.cshtml" />
     <Content Include="Views\Home\Policy.cshtml" />
     <Content Include="Views\Product\CategoryList.cshtml" />
+    <Content Include="Views\Shared\_partial\_contact.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
