--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,10 @@ Shop_07_MultiProduct/obj/
 10_Shop_MultiProduct/bin/
 12_Theme_Multi_Product_Option_2/obj/
 12.2_not13_Shop_MultiProduct/obj/
+14_8_CompanyInfo/obj/
+04_V2_Shop_multiProduct/obj/
+12_Theme_Multi_Product_Option_2/bin/
+15_Company_Info/obj/
+MLTest/obj/
+14_8_CompanyInfo/bin/
+01_Company_Info/obj/
