--- a/15_Company_Info/Web.config
+++ b/15_Company_Info/Web.config
@@ -37,6 +37,11 @@
     <pages controlRenderingCompatibilityVersion="4.0"/>
   </system.web>
   <system.webServer>
+    <handlers>
+      
+      <add name="scriptBundle" verb="*" path="/bundles/global.js" type="System.Web.Optimization.BundleHandler, System.Web.Optimization" preCondition="managedHandler" />
+      <add name="cssBundle" verb="*" path="/bundles/global.css" type="System.Web.Optimization.BundleHandler, System.Web.Optimization" preCondition="managedHandler" />
+    </handlers>
     <modules>
       <remove name="FormsAuthentication"/>
     </modules>
