--- a/12_Shop_MultiProduct/Web.config
+++ b/12_Shop_MultiProduct/Web.config
@@ -39,7 +39,10 @@
     <handlers>
       <add name = "SitemapXml" path="sitemap.xml" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name = "robots" path="robots.txt" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="scriptBundle" verb="*" path="/bundles/global.js" type="System.Web.Optimization.BundleHandler, System.Web.Optimization" preCondition="managedHandler" />
+      <add name="cssBundle" verb="*" path="/bundles/global.css" type="System.Web.Optimization.BundleHandler, System.Web.Optimization" preCondition="managedHandler" />
     </handlers>
+    
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
@@ -116,7 +119,7 @@
   <applicationSettings>
     <AnperoFrontend.Properties.Settings>
       <setting name="AnperoFrontend_AnperoService_AnperoService" serializeAs="String">
-        <value>http://wsv.anpero.com/AnperoService.asmx</value>
+        <value>http://localhost:8433/AnperoService.asmx</value>
       </setting>
     </AnperoFrontend.Properties.Settings>
   </applicationSettings>
