--- a/16_Shop_MultiProduct/Web.config
+++ b/16_Shop_MultiProduct/Web.config
@@ -16,8 +16,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="shortCacheTime" value="5" />
-    <add key="storeID" value="53" />
-    <add key="storeTokenKey" value="84a6d59e-60b8-4773-b9e8-c979e547f158" />
+    <add key="storeID" value="54" />
+    <add key="storeTokenKey" value="5935456f-66bd-4022-8843-422f43bcaccf" />
     <!--<add key="storeID" value="38" />
     <add key="storeTokenKey" value="532e956c-861d-4110-9cba-92110503a100" />-->
   </appSettings> 
@@ -39,6 +39,8 @@
     <handlers>
       <add name = "SitemapXml" path="sitemap.xml" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
       <add name = "robots" path="robots.txt" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add name="scriptBundle" verb="*" path="/bundles/global.js" type="System.Web.Optimization.BundleHandler, System.Web.Optimization" preCondition="managedHandler" />
+      <add name="cssBundle" verb="*" path="/bundles/global.css" type="System.Web.Optimization.BundleHandler, System.Web.Optimization" preCondition="managedHandler" />
     </handlers>
     <modules>
       <remove name="FormsAuthentication" />
