--- a/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
+++ b/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
@@ -179,6 +179,9 @@
     <Content Include="assets\js\parallax.js" />
     <Content Include="assets\js\revslider.js" />
     <Content Include="assets\js\slider.js" />
+    <Content Include="assets\owl.carousel\owl.carousel.css" />
+    <Content Include="assets\owl.carousel\owl.carousel.js" />
+    <Content Include="assets\owl.carousel\owl.carousel.min.js" />
     <Content Include="assets\style.css" />
     <Content Include="assets\stylesheet\bootstrap.min.css" />
     <Content Include="assets\stylesheet\flexslider.css" />
