--- a/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
+++ b/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
@@ -418,39 +418,7 @@
     <Content Include="Scripts\owl.carousel.min.js" />
     <Content Include="Scripts\SearchControl.js" />
     <Content Include="Scripts\ShoppingCart.js" />
-    <Content Include="theme\about-us\index.html" />
-    <Content Include="theme\cart\index.html" />
-    <Content Include="theme\checkout\index.html" />
-    <Content Include="theme\contact-us\index.html" />
-    <Content Include="theme\digital\index.html" />
-    <Content Include="theme\furniture\index.html" />
     <Content Include="theme\index.html" />
-    <Content Include="theme\organic\index.html" />
-    <Content Include="theme\product-category\camera-photo\feed\index.html" />
-    <Content Include="theme\product-category\camera-photo\index.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\feed\index.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\index.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\index05a5.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\index15c6.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\index396d.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\index6261.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\index68fe.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\index7881.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\index7905.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\index9b30.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexa1be.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexa229.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexa24f.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexa94f.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexaef3.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexb4a3.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexb72c.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexd645.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexeb2f.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexeea1.html" />
-    <Content Include="theme\product\aceren-windows-mixed-reality\indexfd5b.html" />
-    <Content Include="theme\shop\feed\index.html" />
-    <Content Include="theme\shop\index.html" />
     <Content Include="theme\style.min.css" />
     <Content Include="theme\style.red.css" />
     <Content Include="theme\wp-content\plugins\akismet\_inc\form.js" />
@@ -1451,6 +1419,7 @@
     <Content Include="theme\wp-content\themes\gokko\assets\fonts\gokko\fonts\Gokko-Icon05fa.ttf" />
     <Content Include="theme\wp-content\themes\gokko\assets\fonts\gokko\fonts\Gokko-Icon05fa.woff" />
     <Content Include="Views\Product\GetByCategory.cshtml" />
+    <Content Include="Views\Product\List_BACK.cshtml" />
     <None Include="Web References\WebService\AnperoService.disco" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
