--- a/16_Shop_MultiProduct/bin/AnperoFrontend.dll.config
+++ b/16_Shop_MultiProduct/bin/AnperoFrontend.dll.config
@@ -29,9 +29,9 @@
         <remove assembly="Microsoft.VisualStudio.Web.PageInspector.Loader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
     </compilation>
-    <customErrors defaultRedirect="~/" mode="Off">
-      <error statusCode="404" redirect="~/404.htm" />
-      <error statusCode="500" redirect="~/500.htm" />
+    <customErrors defaultRedirect="~/" mode="On">
+      <error statusCode="404" redirect="/" />
+      <error statusCode="500" redirect="/" />
     </customErrors>
     <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
