--- a/16_Shop_MultiProduct/bin/AnperoFrontend.dll.config
+++ b/16_Shop_MultiProduct/bin/AnperoFrontend.dll.config
@@ -30,8 +30,8 @@
       </assemblies>
     </compilation>
     <customErrors defaultRedirect="~/" mode="On">
-      <error statusCode="404" redirect="/" />
-      <error statusCode="500" redirect="/" />
+      <error statusCode="404" redirect="/Error" />
+      <error statusCode="500" redirect="/Error" />
     </customErrors>
     <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
