--- a/16_Shop_MultiProduct/Web.config
+++ b/16_Shop_MultiProduct/Web.config
@@ -29,7 +29,7 @@
         <remove assembly="Microsoft.VisualStudio.Web.PageInspector.Loader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
     </compilation>
-    <customErrors defaultRedirect="~/" mode="On">
+    <customErrors defaultRedirect="~/" mode="Off">
       <error statusCode="404" redirect="/Error" />
       <error statusCode="500" redirect="/Error" />
     </customErrors>
