--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,13 @@ Shop_07_MultiProduct/obj/
 03_HR_Service_Frontend/03_HR.csproj.user
 04_Shop_multiProduct/04_Shop_MultiProduct.csproj.user
 10_Shop_MultiProduct/obj/
+16_Shop_MultiProduct/obj/
+MLTest/
+14_8_CompanyInfo/obj/
+14_8_CompanyInfo/bin/AnperoFrontend.pdb
+15_Company_Info/obj/
+12_Theme_Multi_Product_Option_2/obj/
+12_Theme_Multi_Product_Option_2/bin/
+12.2_not13_Shop_MultiProduct/obj/
+04_V2_Shop_multiProduct/obj/
+14_8_CompanyInfo/bin/
