update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,8 @@ MLTest/obj/Release/netcoreapp2.2/MLTest.csproj.CoreCompileInputs.cache
 MLTest/obj/
 15_Company_Info/obj/
 16_Shop_MultiProduct/obj/
+04_V2_Shop_multiProduct/04_V2_Shop_MultiProduct.csproj.user
+16_Shop_MultiProduct/Properties/PublishProfiles/Theme 16.pubxml.user
+16_Shop_MultiProduct/16_Theme_MultiProduct.csproj.user
+15_Company_Info/15_company_Info.csproj.user
+14_8_CompanyInfo/14_CompanyInfo.csproj.user
