--- a/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
+++ b/16_Shop_MultiProduct/16_Theme_MultiProduct.csproj
@@ -425,6 +425,7 @@
     <Content Include="Scripts\jquery.cokie.min.js" />
     <Content Include="Scripts\owl.carousel.min.js" />
     <Content Include="Scripts\SearchControl.js" />
+    <Content Include="Scripts\Warranty.js" />
     <Content Include="Scripts\ShoppingCart.js" />
     <Content Include="theme\index.html" />
     <Content Include="theme\style.min.css" />
